{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 17,
  "lineage": "3275828d-7b12-0957-fdc3-82466744e218",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077e0a2751db4f926",
            "arn": "arn:aws:ec2:us-east-1:033848496951:instance/i-0f1d29e23f624f828",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "stock-portfolio-ec2",
            "id": "i-0f1d29e23f624f828",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "stock-portfolio-deploy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c77bafa49529ba06",
            "private_dns": "ip-10-0-1-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-44-222-242-21.compute-1.amazonaws.com",
            "public_ip": "44.222.242.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-092a256bed77e5e64",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035435640c6e80f1c",
            "tags": {
              "Name": "stock-portfolio"
            },
            "tags_all": {
              "Name": "stock-portfolio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a6962e995b27e30"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_key_pair.deploy",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_arm64",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033848496951:internet-gateway/igw-06c2b740c1c7deec6",
            "id": "igw-06c2b740c1c7deec6",
            "owner_id": "033848496951",
            "tags": {
              "Name": "stock-portfolio"
            },
            "tags_all": {
              "Name": "stock-portfolio"
            },
            "vpc_id": "vpc-0c6e6a51e82f7930f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033848496951:route-table/rtb-0fb39eb327f1f2985",
            "id": "rtb-0fb39eb327f1f2985",
            "owner_id": "033848496951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c2b740c1c7deec6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stock-portfolio-public"
            },
            "tags_all": {
              "Name": "stock-portfolio-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6e6a51e82f7930f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0694c2dab8f687e14",
            "route_table_id": "rtb-0fb39eb327f1f2985",
            "subnet_id": "subnet-035435640c6e80f1c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033848496951:security-group/sg-09a6962e995b27e30",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a6962e995b27e30",
            "ingress": [
              {
                "cidr_blocks": [
                  "93.9.237.242/32"
                ],
                "description": "App from home",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "93.9.237.242/32"
                ],
                "description": "SSH from home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stock-portfolio-ec2",
            "name_prefix": "",
            "owner_id": "033848496951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stock-portfolio-ec2"
            },
            "tags_all": {
              "Name": "stock-portfolio-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6e6a51e82f7930f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033848496951:subnet/subnet-035435640c6e80f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035435640c6e80f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033848496951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stock-portfolio-public"
            },
            "tags_all": {
              "Name": "stock-portfolio-public"
            },
            "vpc_id": "vpc-0c6e6a51e82f7930f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:033848496951:vpc/vpc-0c6e6a51e82f7930f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0800fb362a112e5d2",
            "default_route_table_id": "rtb-007098638e499bd89",
            "default_security_group_id": "sg-04aa19c792a569d1c",
            "dhcp_options_id": "dopt-717c1f0b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6e6a51e82f7930f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007098638e499bd89",
            "owner_id": "033848496951",
            "tags": {
              "Name": "stock-portfolio"
            },
            "tags_all": {
              "Name": "stock-portfolio"
            }
          }
        }
      ]
    }
  ]
}